Corrected alignment for the sticky post icon.

--- a/files/style.css
+++ b/files/style.css
@@ -182,6 +182,8 @@ h1 {
 	font-size: 65%;
 	color: #669;
 
+	margin-left: 4px;
+
 	content: "\e146";
 }
 
